--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "heroicons": "^2.0.16",
     "next": "^13.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
