--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "framer-motion": "^10.12.16",
     "heroicons": "^2.0.16",
     "next": "^13.2.4",
     "react": "^18.2.0",
