--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1"
   },
