--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
     "heroicons": "^2.0.16",
     "next": "^13.2.4",
