--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "simple-icons": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
