--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "portfolio",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -6,28 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.16",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@sendgrid/mail": "^7.7.0",
-    "axios": "^1.4.0",
-    "framer-motion": "^10.12.16",
-    "heroicons": "^2.0.16",
-    "next": "^13.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
-    "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1",
-    "simple-icons": "^13.11.0"
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.9.0",
+    "eslint-config-next": "^15.3.3",
+    "framer-motion": "^12.17.0",
+    "heroicons": "^2.2.0",
+    "next": "15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "simple-icons": "^15.1.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^24",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
